source/tools/stubgen.so/cpp/y.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: declaration
    2                 | translation_unit declaration

    3 declaration: declaration_specifiers ';'
    4            | EXTERN STRING_LITERAL compound_statement
    5            | member_func_inlined
    6            | function_skeleton
    7            | ';'
    8            | error

    9 declaration_specifiers: member_specifier
   10                       | forward_decl

   11 type_specifier: union_specifier
   12               | enum_specifier
   13               | class_specifier

   14 ampersand_opt: %empty
   15              | '&'

   16 type_name: non_reference_type ampersand_opt
   17          | CONST non_reference_type ampersand_opt

   18 forward_decl: CLASS IDENTIFIER
   19             | CLASS scoped_identifier
   20             | STRUCT IDENTIFIER
   21             | STRUCT scoped_identifier

   22 non_reference_type: scoped_identifier
   23                   | IDENTIFIER
   24                   | STRUCT IDENTIFIER
   25                   | scoped_identifier '<' template_instance_arg_list '>'
   26                   | IDENTIFIER '<' template_instance_arg_list '>'
   27                   | scoped_identifier '<' template_instance_arg_list '>' pointer
   28                   | IDENTIFIER '<' template_instance_arg_list '>' pointer
   29                   | scoped_identifier pointer
   30                   | IDENTIFIER pointer
   31                   | STRUCT IDENTIFIER pointer
   32                   | simple_signed_type
   33                   | simple_signed_type pointer

   34 simple_signed_type: simple_type_name
   35                   | SIGNED simple_type_name
   36                   | UNSIGNED simple_type_name

   37 simple_type_name: CHAR
   38                 | SHORT
   39                 | SHORT INT
   40                 | INT
   41                 | LONG
   42                 | LONG INT
   43                 | LONG LONG
   44                 | LONG LONG INT
   45                 | UNSIGNED
   46                 | FLOAT
   47                 | DOUBLE
   48                 | VOID

   49 scoped_identifier: IDENTIFIER CLCL IDENTIFIER
   50                  | scoped_identifier CLCL IDENTIFIER

   51 pointer: asterisk
   52        | pointer asterisk

   53 asterisk: '*'
   54         | '*' CONST

   55 variable_or_parameter: type_name bitfield_savvy_identifier
   56                      | type_name scoped_identifier
   57                      | variable_or_parameter '[' constant_value ']'
   58                      | variable_or_parameter '[' ']'

   59 bitfield_savvy_identifier: IDENTIFIER
   60                          | IDENTIFIER ':' CONSTANT

   61 variable_name: bitfield_savvy_identifier
   62              | pointer IDENTIFIER
   63              | variable_name '[' constant_value ']'
   64              | variable_name '[' ']'

   65 variable_specifier: variable_or_parameter
   66                   | EXTERN variable_or_parameter
   67                   | variable_or_parameter '=' constant_value

   68 multiple_variable_specifier: variable_specifier
   69                            | multiple_variable_specifier ',' variable_name

   70 variable_specifier_list: multiple_variable_specifier ';'
   71                        | variable_specifier_list multiple_variable_specifier ';'

   72 parameter_list_opt: %empty
   73                   | parameter_list
   74                   | parameter_list ',' ELIPSIS
   75                   | ELIPSIS

   76 parameter_list: variable_specifier
   77               | unnamed_parameter
   78               | parameter_list ',' variable_specifier
   79               | parameter_list ',' unnamed_parameter

   80 unnamed_parameter: type_name
   81                  | type_name '=' constant_value
   82                  | unnamed_parameter '[' constant_value ']'
   83                  | unnamed_parameter '[' ']'

   84 function_skeleton: member_func_skel compound_statement

   85 $@1: %empty

   86 function_skeleton: constructor_skeleton ':' $@1 compound_statement
   87                  | template_specifier member_func_skel compound_statement

   88 $@2: %empty

   89 function_skeleton: template_specifier constructor_skeleton ':' $@2 compound_statement

   90 member_func_inlined: member_func_specifier compound_statement

   91 $@3: %empty

   92 member_func_inlined: constructor ':' $@3 compound_statement

   93 member_func_skel: member_func_skel_spec const_opt throw_decl
   94                 | constructor_skeleton
   95                 | destructor_skeleton

   96 member_func_specifier: function_specifier const_opt throw_decl
   97                      | constructor
   98                      | destructor

   99 member_func_skel_spec: type_name scoped_identifier '(' parameter_list_opt ')'
  100                      | type_name IDENTIFIER '<' template_instance_arg_list '>' CLCL IDENTIFIER '(' parameter_list_opt ')'
  101                      | overloaded_op_skeleton

  102 function_specifier: type_name IDENTIFIER '(' parameter_list_opt ')'
  103                   | overloaded_op_specifier

  104 overloaded_op_skeleton: type_name scoped_identifier CLCL OPERATOR any_operator '(' parameter_list_opt ')'
  105                       | scoped_identifier CLCL OPERATOR type_name '(' ')'
  106                       | type_name IDENTIFIER CLCL OPERATOR any_operator '(' parameter_list_opt ')'
  107                       | IDENTIFIER CLCL OPERATOR type_name '(' ')'

  108 overloaded_op_specifier: type_name OPERATOR any_operator '(' parameter_list_opt ')'
  109                        | OPERATOR type_name '(' ')'

  110 const_opt: %empty
  111          | CONST

  112 throw_decl: %empty
  113           | THROW '(' throw_list ')'

  114 throw_list: type_name
  115           | throw_list ',' type_name

  116 destructor: '~' IDENTIFIER '(' ')'

  117 destructor_skeleton: scoped_identifier CLCL '~' IDENTIFIER '(' ')'
  118                    | IDENTIFIER CLCL '~' IDENTIFIER '(' ')'
  119                    | IDENTIFIER '<' template_instance_arg_list '>' CLCL '~' IDENTIFIER '(' ')'
  120                    | scoped_identifier '<' template_instance_arg_list '>' CLCL '~' IDENTIFIER '(' ')'

  121 constructor: IDENTIFIER '(' parameter_list_opt ')' throw_decl

  122 constructor_skeleton: scoped_identifier '(' parameter_list_opt ')' throw_decl
  123                     | IDENTIFIER '<' template_instance_arg_list '>' CLCL IDENTIFIER '(' parameter_list_opt ')' throw_decl
  124                     | scoped_identifier '<' template_instance_arg_list '>' CLCL IDENTIFIER '(' parameter_list_opt ')' throw_decl

  125 $@4: %empty

  126 compound_statement: '{' $@4 '}'

  127 enum_specifier: ENUM '{' enumerator_list '}'
  128               | ENUM IDENTIFIER '{' enumerator_list '}'
  129               | ENUM IDENTIFIER

  130 enumerator_list: enumerator
  131                | enumerator_list ',' enumerator

  132 enumerator: IDENTIFIER
  133           | IDENTIFIER '=' constant_value

  134 access_specifier_opt: %empty
  135                     | access_specifier

  136 access_specifier_list: access_specifier ':'
  137                      | access_specifier_list access_specifier ':'

  138 access_specifier: PUBLIC
  139                 | PRIVATE
  140                 | PROTECTED

  141 unary_operator: '&'
  142               | '*'
  143               | '+'
  144               | '-'
  145               | '~'
  146               | '!'

  147 binary_operator: '/'
  148                | '%'
  149                | '^'
  150                | '|'
  151                | '<'
  152                | '>'
  153                | ','

  154 assignment_operator: '='
  155                    | MUL_ASSIGN
  156                    | DIV_ASSIGN
  157                    | MOD_ASSIGN
  158                    | ADD_ASSIGN
  159                    | SUB_ASSIGN
  160                    | LEFT_ASSIGN
  161                    | RIGHT_ASSIGN
  162                    | AND_ASSIGN
  163                    | XOR_ASSIGN
  164                    | OR_ASSIGN

  165 any_operator: assignment_operator
  166             | unary_operator
  167             | binary_operator
  168             | NEW
  169             | DELETE
  170             | PTR_OP
  171             | MEM_PTR_OP
  172             | INC_OP
  173             | DEC_OP
  174             | LEFT_OP
  175             | RIGHT_OP
  176             | LE_OP
  177             | GE_OP
  178             | EQ_OP
  179             | NE_OP
  180             | AND_OP
  181             | OR_OP
  182             | '[' ']'
  183             | '(' ')'

  184 constant_value: expression
  185               | compound_statement

  186 expression: additive_expression

  187 primary_expression: CONSTANT
  188                   | '-' CONSTANT
  189                   | STRING_LITERAL
  190                   | IDENTIFIER
  191                   | scoped_identifier
  192                   | '(' expression ')'

  193 multiplicative_expression: primary_expression
  194                          | multiplicative_expression '*' primary_expression
  195                          | multiplicative_expression '/' primary_expression
  196                          | multiplicative_expression '%' primary_expression

  197 additive_expression: multiplicative_expression
  198                    | additive_expression '+' multiplicative_expression
  199                    | additive_expression '-' multiplicative_expression

  200 union_specifier: UNION IDENTIFIER '{' variable_specifier_list '}'
  201                | UNION '{' variable_specifier_list '}'
  202                | UNION IDENTIFIER

  203 class_specifier: CLASS IDENTIFIER '{' member_list_opt '}'
  204                | CLASS IDENTIFIER ':' superclass_list '{' member_list_opt '}'
  205                | template_specifier CLASS IDENTIFIER '{' member_list_opt '}'
  206                | template_specifier CLASS IDENTIFIER ':' superclass_list '{' member_list_opt '}'
  207                | STRUCT '{' member_list_opt '}'
  208                | STRUCT IDENTIFIER '{' member_list_opt '}'
  209                | STRUCT IDENTIFIER ':' superclass_list '{' member_list_opt '}'
  210                | template_specifier STRUCT IDENTIFIER '{' member_list_opt '}'
  211                | template_specifier STRUCT IDENTIFIER ':' superclass_list '{' member_list_opt '}'

  212 superclass_list: superclass
  213                | superclass_list ',' superclass

  214 superclass: access_specifier_opt type_name

  215 friend_specifier: FRIEND member_func_specifier
  216                 | FRIEND forward_decl

  217 member_list_opt: %empty
  218                | member_list

  219 member_list: member_with_access
  220            | member_list member_with_access

  221 member_or_error: member
  222                | error

  223 member_with_access: member_or_error
  224                   | access_specifier_list member_or_error

  225 member: member_specifier ';'
  226       | friend_specifier ';'
  227       | member_func_inlined
  228       | ';'

  229 member_specifier: multiple_variable_specifier
  230                 | member_func_specifier
  231                 | EXTERN member_func_specifier
  232                 | member_func_specifier '=' CONSTANT
  233                 | mem_type_specifier

  234 mem_type_specifier: type_specifier
  235                   | type_specifier IDENTIFIER
  236                   | mem_type_specifier '[' ']'
  237                   | mem_type_specifier '[' constant_value ']'

  238 template_arg: CLASS IDENTIFIER
  239             | type_name IDENTIFIER

  240 template_arg_list: template_arg
  241                  | template_arg_list ',' template_arg

  242 template_instance_arg: CONSTANT
  243                      | type_name

  244 template_instance_arg_list: template_instance_arg
  245                           | template_instance_arg_list ',' template_instance_arg

  246 template_specifier: TEMPLATE '<' template_arg_list '>'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 146
'%' (37) 148 196
'&' (38) 15 141
'(' (40) 99 100 102 104 105 106 107 108 109 113 116 117 118 119 120
    121 122 123 124 183 192
')' (41) 99 100 102 104 105 106 107 108 109 113 116 117 118 119 120
    121 122 123 124 183 192
'*' (42) 53 54 142 194
'+' (43) 143 198
',' (44) 69 74 78 79 115 131 153 213 241 245
'-' (45) 144 188 199
'/' (47) 147 195
':' (58) 60 86 89 92 136 137 204 206 209 211
';' (59) 3 7 70 71 225 226 228
'<' (60) 25 26 27 28 100 119 120 123 124 151 246
'=' (61) 67 81 133 154 232
'>' (62) 25 26 27 28 100 119 120 123 124 152 246
'[' (91) 57 58 63 64 82 83 182 236 237
']' (93) 57 58 63 64 82 83 182 236 237
'^' (94) 149
'{' (123) 126 127 128 200 201 203 204 205 206 207 208 209 210 211
'|' (124) 150
'}' (125) 126 127 128 200 201 203 204 205 206 207 208 209 210 211
'~' (126) 116 117 118 119 120 145
error (256) 8 222
IDENTIFIER (258) 18 20 23 24 26 28 30 31 49 50 59 60 62 100 102 106
    107 116 117 118 119 120 121 123 124 128 129 132 133 190 200 202
    203 204 205 206 208 209 210 211 235 238 239
CONSTANT (259) 60 187 188 232 242
STRING_LITERAL (260) 4 189
CHAR (261) 37
SHORT (262) 38 39
INT (263) 39 40 42 44
LONG (264) 41 42 43 44
SIGNED (265) 35
UNSIGNED (266) 36 45
FLOAT (267) 46
DOUBLE (268) 47
VOID (269) 48
NEW (270) 168
DELETE (271) 169
TEMPLATE (272) 246
THROW (273) 113
PTR_OP (274) 170
INC_OP (275) 172
DEC_OP (276) 173
LEFT_OP (277) 174
RIGHT_OP (278) 175
LE_OP (279) 176
GE_OP (280) 177
EQ_OP (281) 178
NE_OP (282) 179
AND_OP (283) 180
OR_OP (284) 181
MUL_ASSIGN (285) 155
DIV_ASSIGN (286) 156
MOD_ASSIGN (287) 157
ADD_ASSIGN (288) 158
SUB_ASSIGN (289) 159
LEFT_ASSIGN (290) 160
RIGHT_ASSIGN (291) 161
AND_ASSIGN (292) 162
XOR_ASSIGN (293) 163
OR_ASSIGN (294) 164
CLCL (295) 49 50 100 104 105 106 107 117 118 119 120 123 124
MEM_PTR_OP (296) 171
FRIEND (297) 215 216
OPERATOR (298) 104 105 106 107 108 109
CONST (299) 17 54 111
CLASS (300) 18 19 203 204 205 206 238
STRUCT (301) 20 21 24 31 207 208 209 210 211
UNION (302) 200 201 202
ENUM (303) 127 128 129
PROTECTED (304) 140
PRIVATE (305) 139
PUBLIC (306) 138
EXTERN (307) 4 66 231
ELIPSIS (308) 74 75


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
translation_unit (77)
    on left: 1 2, on right: 0 2
declaration (78)
    on left: 3 4 5 6 7 8, on right: 1 2
declaration_specifiers (79)
    on left: 9 10, on right: 3
type_specifier (80)
    on left: 11 12 13, on right: 234 235
ampersand_opt (81)
    on left: 14 15, on right: 16 17
type_name (82)
    on left: 16 17, on right: 55 56 80 81 99 100 102 104 105 106 107
    108 109 114 115 214 239 243
forward_decl (83)
    on left: 18 19 20 21, on right: 10 216
non_reference_type (84)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33, on right: 16 17
simple_signed_type (85)
    on left: 34 35 36, on right: 32 33
simple_type_name (86)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48, on right: 34 35 36
scoped_identifier (87)
    on left: 49 50, on right: 19 21 22 25 27 29 50 56 99 104 105 117
    120 122 124 191
pointer (88)
    on left: 51 52, on right: 27 28 29 30 31 33 52 62
asterisk (89)
    on left: 53 54, on right: 51 52
variable_or_parameter (90)
    on left: 55 56 57 58, on right: 57 58 65 66 67
bitfield_savvy_identifier (91)
    on left: 59 60, on right: 55 61
variable_name (92)
    on left: 61 62 63 64, on right: 63 64 69
variable_specifier (93)
    on left: 65 66 67, on right: 68 76 78
multiple_variable_specifier (94)
    on left: 68 69, on right: 69 70 71 229
variable_specifier_list (95)
    on left: 70 71, on right: 71 200 201
parameter_list_opt (96)
    on left: 72 73 74 75, on right: 99 100 102 104 106 108 121 122
    123 124
parameter_list (97)
    on left: 76 77 78 79, on right: 73 74 78 79
unnamed_parameter (98)
    on left: 80 81 82 83, on right: 77 79 82 83
function_skeleton (99)
    on left: 84 86 87 89, on right: 6
$@1 (100)
    on left: 85, on right: 86
$@2 (101)
    on left: 88, on right: 89
member_func_inlined (102)
    on left: 90 92, on right: 5 227
$@3 (103)
    on left: 91, on right: 92
member_func_skel (104)
    on left: 93 94 95, on right: 84 87
member_func_specifier (105)
    on left: 96 97 98, on right: 90 215 230 231 232
member_func_skel_spec (106)
    on left: 99 100 101, on right: 93
function_specifier (107)
    on left: 102 103, on right: 96
overloaded_op_skeleton (108)
    on left: 104 105 106 107, on right: 101
overloaded_op_specifier (109)
    on left: 108 109, on right: 103
const_opt (110)
    on left: 110 111, on right: 93 96
throw_decl (111)
    on left: 112 113, on right: 93 96 121 122 123 124
throw_list (112)
    on left: 114 115, on right: 113 115
destructor (113)
    on left: 116, on right: 98
destructor_skeleton (114)
    on left: 117 118 119 120, on right: 95
constructor (115)
    on left: 121, on right: 92 97
constructor_skeleton (116)
    on left: 122 123 124, on right: 86 89 94
compound_statement (117)
    on left: 126, on right: 4 84 86 87 89 90 92 185
$@4 (118)
    on left: 125, on right: 126
enum_specifier (119)
    on left: 127 128 129, on right: 12
enumerator_list (120)
    on left: 130 131, on right: 127 128 131
enumerator (121)
    on left: 132 133, on right: 130 131
access_specifier_opt (122)
    on left: 134 135, on right: 214
access_specifier_list (123)
    on left: 136 137, on right: 137 224
access_specifier (124)
    on left: 138 139 140, on right: 135 136 137
unary_operator (125)
    on left: 141 142 143 144 145 146, on right: 166
binary_operator (126)
    on left: 147 148 149 150 151 152 153, on right: 167
assignment_operator (127)
    on left: 154 155 156 157 158 159 160 161 162 163 164, on right:
    165
any_operator (128)
    on left: 165 166 167 168 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183, on right: 104 106 108
constant_value (129)
    on left: 184 185, on right: 57 63 67 81 82 133 237
expression (130)
    on left: 186, on right: 184 192
primary_expression (131)
    on left: 187 188 189 190 191 192, on right: 193 194 195 196
multiplicative_expression (132)
    on left: 193 194 195 196, on right: 194 195 196 197 198 199
additive_expression (133)
    on left: 197 198 199, on right: 186 198 199
union_specifier (134)
    on left: 200 201 202, on right: 11
class_specifier (135)
    on left: 203 204 205 206 207 208 209 210 211, on right: 13
superclass_list (136)
    on left: 212 213, on right: 204 206 209 211 213
superclass (137)
    on left: 214, on right: 212 213
friend_specifier (138)
    on left: 215 216, on right: 226
member_list_opt (139)
    on left: 217 218, on right: 203 204 205 206 207 208 209 210 211
member_list (140)
    on left: 219 220, on right: 218 220
member_or_error (141)
    on left: 221 222, on right: 223 224
member_with_access (142)
    on left: 223 224, on right: 219 220
member (143)
    on left: 225 226 227 228, on right: 221
member_specifier (144)
    on left: 229 230 231 232 233, on right: 9 225
mem_type_specifier (145)
    on left: 234 235 236 237, on right: 233 236 237
template_arg (146)
    on left: 238 239, on right: 240 241
template_arg_list (147)
    on left: 240 241, on right: 241 246
template_instance_arg (148)
    on left: 242 243, on right: 244 245
template_instance_arg_list (149)
    on left: 244 245, on right: 25 26 27 28 100 119 120 123 124 245
template_specifier (150)
    on left: 246, on right: 87 89 205 206 210 211


State 0

    0 $accept: . translation_unit $end

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    TEMPLATE    shift, and go to state 12
    OPERATOR    shift, and go to state 13
    CONST       shift, and go to state 14
    CLASS       shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    EXTERN      shift, and go to state 19
    ';'         shift, and go to state 20
    '~'         shift, and go to state 21

    translation_unit             go to state 22
    declaration                  go to state 23
    declaration_specifiers       go to state 24
    type_specifier               go to state 25
    type_name                    go to state 26
    forward_decl                 go to state 27
    non_reference_type           go to state 28
    simple_signed_type           go to state 29
    simple_type_name             go to state 30
    scoped_identifier            go to state 31
    variable_or_parameter        go to state 32
    variable_specifier           go to state 33
    multiple_variable_specifier  go to state 34
    function_skeleton            go to state 35
    member_func_inlined          go to state 36
    member_func_skel             go to state 37
    member_func_specifier        go to state 38
    member_func_skel_spec        go to state 39
    function_specifier           go to state 40
    overloaded_op_skeleton       go to state 41
    overloaded_op_specifier      go to state 42
    destructor                   go to state 43
    destructor_skeleton          go to state 44
    constructor                  go to state 45
    constructor_skeleton         go to state 46
    enum_specifier               go to state 47
    union_specifier              go to state 48
    class_specifier              go to state 49
    member_specifier             go to state 50
    mem_type_specifier           go to state 51
    template_specifier           go to state 52


State 1

    8 declaration: error .

    $default  reduce using rule 8 (declaration)


State 2

   23 non_reference_type: IDENTIFIER .
   26                   | IDENTIFIER . '<' template_instance_arg_list '>'
   28                   | IDENTIFIER . '<' template_instance_arg_list '>' pointer
   30                   | IDENTIFIER . pointer
   49 scoped_identifier: IDENTIFIER . CLCL IDENTIFIER
  107 overloaded_op_skeleton: IDENTIFIER . CLCL OPERATOR type_name '(' ')'
  118 destructor_skeleton: IDENTIFIER . CLCL '~' IDENTIFIER '(' ')'
  119                    | IDENTIFIER . '<' template_instance_arg_list '>' CLCL '~' IDENTIFIER '(' ')'
  121 constructor: IDENTIFIER . '(' parameter_list_opt ')' throw_decl
  123 constructor_skeleton: IDENTIFIER . '<' template_instance_arg_list '>' CLCL IDENTIFIER '(' parameter_list_opt ')' throw_decl

    CLCL  shift, and go to state 53
    '<'   shift, and go to state 54
    '*'   shift, and go to state 55
    '('   shift, and go to state 56

    $default  reduce using rule 23 (non_reference_type)

    pointer   go to state 57
    asterisk  go to state 58


State 3

   37 simple_type_name: CHAR .

    $default  reduce using rule 37 (simple_type_name)


State 4

   38 simple_type_name: SHORT .
   39                 | SHORT . INT

    INT  shift, and go to state 59

    $default  reduce using rule 38 (simple_type_name)


State 5

   40 simple_type_name: INT .

    $default  reduce using rule 40 (simple_type_name)


State 6

   41 simple_type_name: LONG .
   42                 | LONG . INT
   43                 | LONG . LONG
   44                 | LONG . LONG INT

    INT   shift, and go to state 60
    LONG  shift, and go to state 61

    $default  reduce using rule 41 (simple_type_name)


State 7

   35 simple_signed_type: SIGNED . simple_type_name

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    UNSIGNED  shift, and go to state 62
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    VOID      shift, and go to state 11

    simple_type_name  go to state 63


State 8

   36 simple_signed_type: UNSIGNED . simple_type_name
   45 simple_type_name: UNSIGNED .

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    UNSIGNED  shift, and go to state 62
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    VOID      shift, and go to state 11

    $default  reduce using rule 45 (simple_type_name)

    simple_type_name  go to state 64


State 9

   46 simple_type_name: FLOAT .

    $default  reduce using rule 46 (simple_type_name)


State 10

   47 simple_type_name: DOUBLE .

    $default  reduce using rule 47 (simple_type_name)


State 11

   48 simple_type_name: VOID .

    $default  reduce using rule 48 (simple_type_name)


State 12

  246 template_specifier: TEMPLATE . '<' template_arg_list '>'

    '<'  shift, and go to state 65


State 13

  109 overloaded_op_specifier: OPERATOR . type_name '(' ')'

    IDENTIFIER  shift, and go to state 66
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    CONST       shift, and go to state 14
    STRUCT      shift, and go to state 67

    type_name           go to state 68
    non_reference_type  go to state 28
    simple_signed_type  go to state 29
    simple_type_name    go to state 30
    scoped_identifier   go to state 69


State 14

   17 type_name: CONST . non_reference_type ampersand_opt

    IDENTIFIER  shift, and go to state 66
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    STRUCT      shift, and go to state 67

    non_reference_type  go to state 70
    simple_signed_type  go to state 29
    simple_type_name    go to state 30
    scoped_identifier   go to state 69


State 15

   18 forward_decl: CLASS . IDENTIFIER
   19             | CLASS . scoped_identifier
  203 class_specifier: CLASS . IDENTIFIER '{' member_list_opt '}'
  204                | CLASS . IDENTIFIER ':' superclass_list '{' member_list_opt '}'

    IDENTIFIER  shift, and go to state 71

    scoped_identifier  go to state 72


State 16

   20 forward_decl: STRUCT . IDENTIFIER
   21             | STRUCT . scoped_identifier
   24 non_reference_type: STRUCT . IDENTIFIER
   31                   | STRUCT . IDENTIFIER pointer
  207 class_specifier: STRUCT . '{' member_list_opt '}'
  208                | STRUCT . IDENTIFIER '{' member_list_opt '}'
  209                | STRUCT . IDENTIFIER ':' superclass_list '{' member_list_opt '}'

    IDENTIFIER  shift, and go to state 73
    '{'         shift, and go to state 74

    scoped_identifier  go to state 75


State 17

  200 union_specifier: UNION . IDENTIFIER '{' variable_specifier_list '}'
  201                | UNION . '{' variable_specifier_list '}'
  202                | UNION . IDENTIFIER

    IDENTIFIER  shift, and go to state 76
    '{'         shift, and go to state 77


State 18

  127 enum_specifier: ENUM . '{' enumerator_list '}'
  128               | ENUM . IDENTIFIER '{' enumerator_list '}'
  129               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 78
    '{'         shift, and go to state 79


State 19

    4 declaration: EXTERN . STRING_LITERAL compound_statement
   66 variable_specifier: EXTERN . variable_or_parameter
  231 member_specifier: EXTERN . member_func_specifier

    IDENTIFIER      shift, and go to state 80
    STRING_LITERAL  shift, and go to state 81
    CHAR            shift, and go to state 3
    SHORT           shift, and go to state 4
    INT             shift, and go to state 5
    LONG            shift, and go to state 6
    SIGNED          shift, and go to state 7
    UNSIGNED        shift, and go to state 8
    FLOAT           shift, and go to state 9
    DOUBLE          shift, and go to state 10
    VOID            shift, and go to state 11
    OPERATOR        shift, and go to state 13
    CONST           shift, and go to state 14
    STRUCT          shift, and go to state 67
    '~'             shift, and go to state 21

    type_name                go to state 82
    non_reference_type       go to state 28
    simple_signed_type       go to state 29
    simple_type_name         go to state 30
    scoped_identifier        go to state 69
    variable_or_parameter    go to state 83
    member_func_specifier    go to state 84
    function_specifier       go to state 40
    overloaded_op_specifier  go to state 42
    destructor               go to state 43
    constructor              go to state 85


State 20

    7 declaration: ';' .

    $default  reduce using rule 7 (declaration)


State 21

  116 destructor: '~' . IDENTIFIER '(' ')'

    IDENTIFIER  shift, and go to state 86


State 22

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . declaration

    $end        shift, and go to state 87
    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    TEMPLATE    shift, and go to state 12
    OPERATOR    shift, and go to state 13
    CONST       shift, and go to state 14
    CLASS       shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    EXTERN      shift, and go to state 19
    ';'         shift, and go to state 20
    '~'         shift, and go to state 21

    declaration                  go to state 88
    declaration_specifiers       go to state 24
    type_specifier               go to state 25
    type_name                    go to state 26
    forward_decl                 go to state 27
    non_reference_type           go to state 28
    simple_signed_type           go to state 29
    simple_type_name             go to state 30
    scoped_identifier            go to state 31
    variable_or_parameter        go to state 32
    variable_specifier           go to state 33
    multiple_variable_specifier  go to state 34
    function_skeleton            go to state 35
    member_func_inlined          go to state 36
    member_func_skel             go to state 37
    member_func_specifier        go to state 38
    member_func_skel_spec        go to state 39
    function_specifier           go to state 40
    overloaded_op_skeleton       go to state 41
    overloaded_op_specifier      go to state 42
    destructor                   go to state 43
    destructor_skeleton          go to state 44
    constructor                  go to state 45
    constructor_skeleton         go to state 46
    enum_specifier               go to state 47
    union_specifier              go to state 48
    class_specifier              go to state 49
    member_specifier             go to state 50
    mem_type_specifier           go to state 51
    template_specifier           go to state 52


State 23

    1 translation_unit: declaration .

    $default  reduce using rule 1 (translation_unit)


State 24

    3 declaration: declaration_specifiers . ';'

    ';'  shift, and go to state 89


State 25

  234 mem_type_specifier: type_specifier .
  235                   | type_specifier . IDENTIFIER

    IDENTIFIER  shift, and go to state 90

    $default  reduce using rule 234 (mem_type_specifier)


State 26

   55 variable_or_parameter: type_name . bitfield_savvy_identifier
   56                      | type_name . scoped_identifier
   99 member_func_skel_spec: type_name . scoped_identifier '(' parameter_list_opt ')'
  100                      | type_name . IDENTIFIER '<' template_instance_arg_list '>' CLCL IDENTIFIER '(' parameter_list_opt ')'
  102 function_specifier: type_name . IDENTIFIER '(' parameter_list_opt ')'
  104 overloaded_op_skeleton: type_name . scoped_identifier CLCL OPERATOR any_operator '(' parameter_list_opt ')'
  106                       | type_name . IDENTIFIER CLCL OPERATOR any_operator '(' parameter_list_opt ')'
  108 overloaded_op_specifier: type_name . OPERATOR any_operator '(' parameter_list_opt ')'

    IDENTIFIER  shift, and go to state 91
    OPERATOR    shift, and go to state 92

    scoped_identifier          go to state 93
    bitfield_savvy_identifier  go to state 94


State 27

   10 declaration_specifiers: forward_decl .

    $default  reduce using rule 10 (declaration_specifiers)


State 28

   16 type_name: non_reference_type . ampersand_opt

    '&'  shift, and go to state 95

    $default  reduce using rule 14 (ampersand_opt)

    ampersand_opt  go to state 96


State 29

   32 non_reference_type: simple_signed_type .
   33                   | simple_signed_type . pointer

    '*'  shift, and go to state 55

    $default  reduce using rule 32 (non_reference_type)

    pointer   go to state 97
    asterisk  go to state 58


State 30

   34 simple_signed_type: simple_type_name .

    $default  reduce using rule 34 (simple_signed_type)


State 31

   22 non_reference_type: scoped_identifier .
   25                   | scoped_identifier . '<' template_instance_arg_list '>'
   27                   | scoped_identifier . '<' template_instance_arg_list '>' pointer
   29                   | scoped_identifier . pointer
   50 scoped_identifier: scoped_identifier . CLCL IDENTIFIER
  105 overloaded_op_skeleton: scoped_identifier . CLCL OPERATOR type_name '(' ')'
  117 destructor_skeleton: scoped_identifier . CLCL '~' IDENTIFIER '(' ')'
  120                    | scoped_identifier . '<' template_instance_arg_list '>' CLCL '~' IDENTIFIER '(' ')'
  122 constructor_skeleton: scoped_identifier . '(' parameter_list_opt ')' throw_decl
  124                     | scoped_identifier . '<' template_instance_arg_list '>' CLCL IDENTIFIER '(' parameter_list_opt ')' throw_decl

    CLCL  shift, and go to state 98
    '<'   shift, and go to state 99
    '*'   shift, and go to state 55
    '('   shift, and go to state 100

    $default  reduce using rule 22 (non_reference_type)

    pointer   go to state 101
    asterisk  go to state 58


State 32

   57 variable_or_parameter: variable_or_parameter . '[' constant_value ']'
   58                      | variable_or_parameter . '[' ']'
   65 variable_specifier: variable_or_parameter .
   67                   | variable_or_parameter . '=' constant_value

    '['  shift, and go to state 102
    '='  shift, and go to state 103

    $default  reduce using rule 65 (variable_specifier)


State 33

   68 multiple_variable_specifier: variable_specifier .

    $default  reduce using rule 68 (multiple_variable_specifier)


State 34

   69 multiple_variable_specifier: multiple_variable_specifier . ',' variable_name
  229 member_specifier: multiple_variable_specifier .

    ','  shift, and go to state 104

    $default  reduce using rule 229 (member_specifier)


State 35

    6 declaration: function_skeleton .
